--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
   }
 }
 
+h1 {
+  font-family: 'Over the Rainbow', cursive;
+  font-size: 72px;
+  color: #95dada;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
